--- a/assets/admin-style.css
+++ b/assets/admin-style.css
@@ -62,14 +62,17 @@ div#sproduct-form-builder {
         justify-content: space-between;
         align-items: center;
     }
+
     [contenteditable="true"] {
         border-bottom: 1px solid #b7b7b7;
         width: 25%;
         outline: 0;
+
         &:focus-visible {
             border-bottom: 1px solid #393939;
         }
     }
+
     .form-steps {
         .inputs {
             padding: 10px;
@@ -82,6 +85,31 @@ div#sproduct-form-builder {
                 margin: 16px 0;
                 gap: 10px;
             }
+        }
+    }
+}
+
+.subscriptionsTableMainBody {
+    background-color: red;
+    .activeButton {
+        span {
+            background-color: #13aa13;
+            color: white;
+            padding: 6px 14px;
+            border-radius: 4px;
+            font-size: 12px;
+            font-weight: 600;
+        }
+    }
+
+    .DeactiveButton {
+        span {
+            background-color: #e03d3d;
+            color: white;
+            padding: 6px 14px;
+            border-radius: 4px;
+            font-size: 12px;
+            font-weight: 600;
         }
     }
 }
