--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -261,3 +261,17 @@ main#primary {
     width: 100px;
     margin: 20px 0;
 }
+
+.horizontalSelected .checkbox-group {
+    flex-direction: column !important;
+    align-items: start !important;
+    gap: 0 !important;
+    >div {
+        margin: 0 !important;
+    }
+    label {
+        flex-direction: row !important;
+    }
+}
+
+.verticalSelected {}
