--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -66,7 +66,7 @@ main#primary {
 
     .sproduct-plans {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
         margin: 30px auto 20px;
@@ -237,6 +237,7 @@ main#primary {
     justify-content: space-evenly;
     flex-wrap: wrap;
     margin: 40px 0 20px;
+    gap: 60px 0;
 }
 
 .productToSproductsDiv label {
@@ -245,6 +246,7 @@ main#primary {
     align-items: center;
     gap: 6px;
     flex-direction: column;
+    min-width: 24%;
 }
 
 .productToSproductsDiv input {
