--- a/assets/admin-style.css
+++ b/assets/admin-style.css
@@ -1,18 +1,29 @@
 #plan-repeater-container {
     margin-top: 20px;
 }
-
+#plan-repeater{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
+}
+#plan-repeater *{
+    font-size: 12px;
+}
 .plan-item {
     padding: 15px;
     margin-bottom: 20px;
     border-radius: 5px;
     position: relative;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .plan-item:nth-child(2n-1) {
     padding: 15px;
     margin-bottom: 20px;
-    background-color: #f9f9f9;
+    background-color: #eee;
     border-radius: 5px;
     position: relative;
 }
@@ -23,16 +34,20 @@
     font-weight: bold;
     color: #333;
 }
-
+.plan-item textarea{
+    min-height: 210px;
+}
+.plan-item input{
+    margin-bottom: 7px;
+}
 .plan-item input,
 .plan-item textarea {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
     box-sizing: border-box;
     border: 1px solid #cecece !important;
-    padding: 6px 14px 6px 30px !important;
+    padding: 4px 10px !important;
     border-radius: 6px !important;
+    margin-left: 10px;
 }
 
 .plan-item .remove-plan {
@@ -42,6 +57,7 @@
     cursor: pointer;
     padding: 6px 12px;
     border-radius: 3px;
+    margin-top: 10px;
     /* position: absolute;
     top: 10px;
     right: 10px; */
@@ -62,8 +78,63 @@
 .plan-item .remove-plan:hover {
     opacity: 0.85;
 }
-
-.input-header select,
+#sproduct-form-builder * {
+    box-sizing: border-box;
+}
+.form-steps .step{
+    border-bottom: 2px solid lightgray;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+}
+.form-steps .step .step-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.remove-step{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.step-input-container .input{
+    padding-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin: 7px 0;
+    flex-wrap: wrap;
+    position: relative;
+    border-bottom: 1px solid #e6e6e6;
+    padding: 7px 0;
+}
+.step-input-container .input #remove-input{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 6px;
+    left: 0;
+}
+.step-input-container .input label{
+    margin-left: 10px;
+}
+.step-input-container .input .logic-input-container{
+    width: 100%;
+}
+.step-input-container .input .logic-input-container .logic{
+    padding: 10px;
+    width: 100%;
+    background-color: rgba(0,0,0,0.07);
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-top: 7px;
+    flex-wrap: wrap;
+}
+.add-option{
+    margin-top: 10px !important;
+}
+/* .input-header select,
 .input-header input:not([type="checkbox"]),
 .step-condition {
     border: 1px solid #cecece !important;
@@ -272,4 +343,4 @@ input.condition-input {
 .horizVertparent label {
     padding: 8px 10px !important;
     border: 0 !important;
-}
+} */
